2006-10-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core: Replaced std::abs with llabs (see #357691)
	* src/hfs.cc,
	  src/xfs.cc: added support for reading of volumelabel
	* src/reiserfs.cc: added Fixme

2006-09-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: Fix libparted detection in case --as-needed flag is
	  passed (#357679)

2006-09-25 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/jfs.cc: added support for reading of volumelabel

2006-09-23 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/DialogFeatures.h,
	  src/DialogFeatures.cc: added 'Read Label' info

2006-09-23 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/reiser4.cc
	  src/reiserfs.cc: added support for reading of volumelabel

2006-09-23 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/ntfs.cc: added support for reading of volumelabel

2006-09-17 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* added popupmenu to operationslist and did some (higrelated) cleanups

2006-09-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/TreeView_Detail.h,
	  src/TreeView_Detail.cc: trivial cleanups

2006-09-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/DialogFeatures.cc: higgiefied the dialog a bit (#353104)

2006-09-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Win_GParted.h,
	  src/Win_GParted.cc: some small changes to make the GUI more
	  consistent (#353140)

2006-09-14 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: changed libpartedcheck a bit. from now on we declare
	  the min. version as variable in one place. This finally closes #330776

2006-09-14 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/ext2.cc,
	  src/ext3.cc: fixed a couple of issues with reading of volumelabels
	  (#338528)
	
2006-09-13 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: finally fixed problem with 'disappearing'
	  devicenodes by using udevsettle (#352744)

2006-09-12 Bart Hakvoort <hakvoort@cvs.gnome.org>
