@@ -1,5 +1,10 @@
 2006-10-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: only add mountpoints and paths if they exist
+	* src/reiser4.cc: don't show '<none>' if volumelabel is empty
+
+2006-10-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core: Replaced std::abs with llabs (see #357691)
 	* src/hfs.cc,
 	  src/xfs.cc: added support for reading of volumelabel
